fix: icon spacing in nav

--- a/user-guide/docs/css/ds-docs.css
+++ b/user-guide/docs/css/ds-docs.css
@@ -112,7 +112,7 @@ b {
 /* To add CSS that should be moved to TACC/TACC-Docs */
 
 /* To add space before and after icon from `_text_{ .fa fa.icon-name }` */
-.fa::before {
+[role="main"] .fa::before {
     margin-inline: 0.5ch;
 }
 
